[gd_scene load_steps=4 format=3 uid="uid://d3t0tha7ecr3r"]

[ext_resource type="Script" path="res://scripts/map_square.gd" id="1_7r5aj"]

[sub_resource type="Gradient" id="Gradient_m1sgn"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.854961, 0.808308, 0.340212, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cxna2"]
gradient = SubResource("Gradient_m1sgn")
width = 360

[node name="MapSquare" type="Node2D"]
position = Vector2(0, -8)
script = ExtResource("1_7r5aj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -320)
scale = Vector2(1, 640)
texture = SubResource("GradientTexture1D_cxna2")

[node name="ScreenStatusNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-170, -630)
rect = Rect2(-10, -10, 360, 10)

[node name="NewChunkPos" type="Marker2D" parent="."]
position = Vector2(0, -640)

[connection signal="screen_entered" from="ScreenStatusNotifier" to="." method="_on_screen_status_notifier_screen_entered"]
[connection signal="screen_exited" from="ScreenStatusNotifier" to="." method="_on_screen_status_notifier_screen_exited"]
